--- a/eStoreAPI/appsettings.json
+++ b/eStoreAPI/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Uid=anhtuantran;Pwd=1;Database=FStoreDB;TrustServerCertificate=True; " }
+  "ConnectionStrings": { "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Uid=anhtuantran;Pwd=1;Database=FStoreDB;Trust_Connection=True; " }
 }
